# etrobocon2023

./: .bashrc  .clang-format  .gitignore  CMakeLists.txt  Dockerfile  DoubleLoopLeftFileMerger.sh  DoubleLoopRightFileMerger.sh  Makefile  Makefile.inc  README.md  app.cfg  app.cpp  app.h  make.sh  requirements.txt
c_py/: share_memory.cpp  share_memory.py  sm
communication_py/: ReadServer.py  SendServer.py
rear_camera_py/: .gitignore  Makefile  create_env.sh  pyproject.toml  rear-camera.service  rear_camera_distance_param.json  rear_camera_param.npy  requirements.txt  result.txt  tox.ini
rear_camera_py/rear_camera/: __main__.py  angle_server.py  calibrator.py  camera_interface.py  line_angle_calculator.py
rear_camera_py/src/: __init__.py  __main__.py  block_area_map.py  block_de_treasure_hunter.py  calculator.py  calibrator.py  camera_interface.py  camera_interface2.py  capture_snap_image.py  env_test.py  experiment.py  get_area_info.py  get_area_info2.py  get_area_info2_backup_1031.py  get_area_info_backup_1030.py  get_area_info_backup_1101.py  get_area_info_backup_front_OK.py  image_processing.py  img_processing.py  kill_process.py  line_angle_calculator.py  line_calculator.py  map.py  motion.py  navigator.py  rear_camera.py  robot.py  zikken.py
rear_camera_py/tests/: __init__.py  test_angle_server.py  test_black_extractor.py  test_calculator.py  test_calibrator.py  test_get_area_info.py  test_line_angle_calculator.py  test_navigator.py
rear_camera_py/tests/dummy/: __init__.py  camera_interface.py  picamera2.py
rear_camera_py/work/: search_coodinate.py
(+203 files in other folders)
